--- a/about.html
+++ b/about.html
@@ -337,7 +337,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Class Wiki for COURSE NAME (SEMESTER YEAR)</a>
+      <a class="navbar-brand" href="index.html">Class Wiki for Fantasy Football: Predictive Analytics and Empiricism (Fall 2025)</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
