--- a/about.html
+++ b/about.html
@@ -40,13 +40,13 @@
 <link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
 <script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BM7X404RV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-935TQTG95N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0BM7X404RV');
+  gtag('config', 'G-935TQTG95N');
 </script>
 
 <style type="text/css">
@@ -434,7 +434,7 @@ attached base packages:
 [1] stats     graphics  grDevices utils     datasets  methods   base     
 
 loaded via a namespace (and not attached):
- [1] digest_0.6.37     R6_2.5.1          fastmap_1.2.0     xfun_0.49        
+ [1] digest_0.6.37     R6_2.5.1          fastmap_1.2.0     xfun_0.50        
  [5] cachem_1.1.0      knitr_1.49        htmltools_0.5.8.1 rmarkdown_2.29   
  [9] lifecycle_1.0.4   cli_3.6.3         sass_0.4.9        jquerylib_0.1.4  
 [13] compiler_4.4.2    tools_4.4.2       evaluate_1.0.1    bslib_0.8.0      
