--- a/help.html
+++ b/help.html
@@ -40,13 +40,13 @@
 <link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
 <script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0BM7X404RV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-935TQTG95N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0BM7X404RV');
+  gtag('config', 'G-935TQTG95N');
 </script>
 
 <style type="text/css">
